environments/gloo-gateway/gateway-api/live/demo-admin-config/base/gloo-mesh-ui/gloo-mesh-ui-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: gloo-mesh-ui-httproute
  namespace: gloo-mesh
  labels:
    example: gloo-mesh-ui-route
    gateway: https
spec:
  hostnames:
  - "ui.glooplatform.com"
  parentRefs:
    - name: https
      namespace: gloo-system
  rules:
    - backendRefs:
        - kind: Upstream
          group: gloo.solo.io
          name: gloo-mesh-ui
      matches:
        - path:
            type: PathPrefix
            value: /
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.solo.io
          kind: RouteOption
          name: gloo-mesh-ui-route-policies
